# webex-teams-api

./: CHANGELOG.md  LICENSE  README.md  cisco-spark-api.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/Network/: CiscoSpark.hs
src/Network/CiscoSpark/: Internal.hs  Types.hs
test/Network/: CiscoSparkSpec.hs
test/Network/CiscoSpark/: InternalSpec.hs  TypesSpec.hs
webex-teams-api/: ChangeLog.md  LICENSE  README.md  package.yaml
webex-teams-api/app/: Main.hs
webex-teams-api/src/Network/: CiscoSpark.hs  WebexTeams.hs
webex-teams-api/src/Network/CiscoSpark/: Internal.hs  Types.hs
webex-teams-api/src/Network/WebexTeams/: Internal.hs  Types.hs
webex-teams-api/test/Network/: CiscoSparkSpec.hs  WebexTeamsSpec.hs
webex-teams-api/test/Network/WebexTeams/: InternalSpec.hs  TypesSpec.hs
webex-teams-conduit/: ChangeLog.md  README.md  package.yaml
webex-teams-conduit/app/: Main.hs
webex-teams-conduit/src/Network/WebexTeams/: Conduit.hs
webex-teams-conduit/test/Network/WebexTeams/: ConduitSpec.hs
webex-teams-pipes/: ChangeLog.md  README.md  package.yaml
webex-teams-pipes/app/: Main.hs
webex-teams-pipes/src/Network/WebexTeams/: Pipes.hs
webex-teams-pipes/test/Network/WebexTeams/: PipesSpec.hs
